integration-test/src/main/java/org/pastalab/fray/test/core/success/condition/ConditionAwaitWithoutLock.java
package org.pastalab.fray.test.core.success.condition;

import java.util.concurrent.locks.Condition;
import java.util.concurrent.locks.ReentrantLock;

public class ConditionAwaitWithoutLock {
    public static void main(String[] args) throws InterruptedException {
        ReentrantLock lock = new ReentrantLock();
        Condition condition = lock.newCondition();
        condition.awaitNanos(1000);
    }
}
